# mai_oop_7

./: .gitignore  ARCHITECTURE.md  README.md  codestyle.md
lab_7/: CMakeLists.txt
lab_7/include/: bear.hpp  elf.hpp  fight_visitor.hpp  game.hpp  npc.hpp  npc_factory.hpp  npc_types.hpp  observer.hpp  robber.hpp
lab_7/src/: bear.cpp  elf.cpp  game.cpp  main.cpp  npc.cpp  npc_factory.cpp  observer.cpp  robber.cpp
